Feat(repo): add flexible member search methods
Introduced new, more flexible and readable search methods
directly into the  interface (and its
implementation/data access layer).

These methods enhance the repository's capabilities for
querying members:
- : Basic paginated retrieval.
- : Filter by confirmation status.
- : Search by name or email.
- : Combine search with confirmation filter.

These additions support the complex query requirements
of the  and provide clear, intent-driven
data access operations.